# ego

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: .nojekyll  architecture.md  index.html
docs/assets/: architecture.css  architecture.js
docs/decisions/: 0001-v1-boundaries.md  0002-interactive-shell.md  0003-realtime-observability.md  0004-textual-tui.md  0005-codex-external-sandbox.md  0006-citation-scope-and-human-resolution.md  0007-opencode-external-sandbox-and-default-model.md
src/ego/: __init__.py  __main__.py  cli.py  config.py  events.py  models.py  prompts.py  redaction.py  runner.py  sandbox.py  shell.py  workspace.py
src/ego/deliberation/: __init__.py  engine.py  finalization.py
src/ego/participants/: __init__.py  base.py  claude.py  codex.py  copilot.py  gemini.py  opencode.py  opencode_runtime.py  registry.py
src/ego/storage/: __init__.py  database.py
src/ego/tui/: __init__.py  app.py  assets.py  clipboard.py  commands.py  ego.tcss  input.py  presentation.py  state.py  timeline.py  views.py
tests/: conftest.py  test_architecture_site.py  test_cli.py  test_deliberation.py  test_events.py  test_participants.py  test_real_adapter_boundary.py  test_real_codex_boundary.py  test_real_opencode_boundary.py  test_redaction.py  test_runner.py  test_sandbox.py  test_shell.py  test_storage.py  test_tui.py  test_tui_clipboard.py  test_tui_presentation.py  test_workspace.py
