[project]
name = "ego-cli"
version = "0.1.0"
description = "Structured deliberation across local AI CLIs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "platformdirs>=4.3,<5",
  "pydantic>=2.11,<3",
  "textual>=8.2.8",
  "typer>=0.16,<1",
]

[project.scripts]
ego = "ego.cli:app"

[dependency-groups]
dev = [
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ego"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["ego"]

